--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,46 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+    "name": "LOVE",
+    "short_name": "LOVE",
+    "start_url": "/",
+    "display": "fullscreen",
+    "background_color": "#ff65c3",
+    "description": "Licensing Of Vehicle for Everyone, was created\r\naimed at addressing the growing demand for getting a driver's license.",
+    "dir": "auto",
+    "categories": "government",
+    "lang": "en",
+    "orientation": "any",
+    "scope": "/",
+    "theme_color": "#ff65c3",
+    "icons": [
+        {
+            "src": "/icon_48x48.png",
+            "sizes": "48x48",
+            "type": "image/png"
+        },
+        {
+            "src": "/icon_72x72.png",
+            "sizes": "72x72",
+            "type": "image/png"
+        },
+        {
+            "src": "/icon_96x96.png",
+            "sizes": "96x96",
+            "type": "image/png"
+        },
+        {
+            "src": "/icon_144x144.png",
+            "sizes": "144x144",
+            "type": "image/png"
+        },
+        {
+            "src": "/icon_168x168.png",
+            "sizes": "168x168",
+            "type": "image/png"
+        },
+        {
+            "src": "/icon_192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        }
+    ]
 }
